Updated manifest file.

--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "name": "StarCraft II Archipelago",
-  "game_name": "StarCraft II Archipelago",
-  "package_version": "1.0.0.0",
+  "game_name": "StarCraft II",
+  "package_version": "1.0.1",
   "package_uid": "sc2_ap_skarthe",
   "author": "Skarthe"
 }
